SPosible problema con mapstruct, falla prueba unitaria